<resources>
    <string name="app_name">Facebook</string>
    <string name="empty" />

    <string name="login_phone_hint">Số điện thoại hoặc email</string>
    <string name="login_password_hint">Mật khẩu</string>
    <string name="login_login_btn">Đăng nhập</string>
    <string name="login_forgot_btn">Quên mật khẩu?</string>
    <string name="login_or">Hoặc</string>
    <string name="login_create_btn">Tạo tài khoản mới</string>

    <string name="nav_home">Home</string>
    <string name="nav_video">Video</string>
    <string name="nav_group">Group</string>
    <string name="nav_menu">Account</string>
    <string name="nav_notification">Notification</string>

    <string name="toolbar_search">Search</string>
    <string name="toolbar_message">Message</string>

    <string name="menu_post_like">Like</string>
    <string name="menu_post_comment">Comment</string>
    <string name="menu_post_share">Share</string>

    <string name="post_demo_name">Nguyen Van Son</string>
    <string name="post_demo_time">2h ago</string>
    <string name="post_demo_post">Hai lớp B và C cùng kế thừa từ một lớp cha là lớp A, giả sử B và C overriding phương thức của lớp A (overriding tức là B và C không những cùng kế thừa một phương thức nào đó từ lớp A mà còn sửa lại phương thức đã kế thừa đó tùy thuộc vào B hoặc C). Khi D tiếp tục kế thừa phương thức này từ B và C, D không biết sẽ chọn chọn phương thức của lớp B hay của phương thức của C để kế thừa.</string>
    <string name="post_demo_numberLike">2,3K</string>

    <string name="notification_demo_text">Nghĩa Đinh mentioned you in a comment</string>

    <string name="error_format_input">Sai định dạng</string>
    <string name="error_login_invalid">Tài khoản không tồn tại</string>
    <string name="error_no_network">Không có kết nối internet</string>
    <string name="error_user_existed">Số điện thoại hoặc email đã được sử dụng</string>
    <string name="error_confirm_password">Sai</string>
    <string name="error_null_input">Thiếu</string>
    <string name="error_not_correct_confirmCode_signUp">Sai mã xác nhận</string>
    <string name="error_token_null">Đã hết phiên đăng nhập</string>
    <string name="error_input_type_is_invalid">Sai tài khoản hoặc mật khẩu</string>

    <string name="notify_login_successful">Đăng nhập thành công</string>
    <string name="notify_create_account_successful">Đăng ký thành công</string>
    <string name="notify_add_post_successful">Đăng bài thành công</string>

    <string name="menu_fragment_desc_name">Xem trang cá nhân</string>
    <string name="menu_fragment_name">Nguyen Van Son</string>
    <string name="menu_fragment_title">Menu</string>
    <string name="menu_fragment_logout">Đăng xuất</string>

    <string name="key_id">id</string>
    <string name="key_phone_number">phonenumber</string>
    <string name="key_token">token</string>
    <string name="key_avatar">avatar</string>

    <string name="actionBar_sign_up_welcome">Tạo tài khoản</string>
    <string name="actionBar_sign_up_name">Tên</string>
    <string name="actionBar_sign_up_birthday">Ngày sinh</string>
    <string name="actionBar_sign_up_rules">Điều khoản và quyền riêng tư</string>
    <string name="actionBar_sign_up_email">Địa chỉ email</string>
    <string name="actionBar_sign_up_phone">Số điện thoại</string>
    <string name="actionBar_sign_up_confirm">Xác nhận tài khoản</string>
    <string name="actionBar_create_status">Tạo bài viết</string>

    <string name="storage_data_account">TOKEN_STORAGE</string>

</resources>
