<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/nav_home"
        android:title="@string/nav_home"
        android:icon="@drawable/ic_baseline_home" />

    <item android:id="@+id/nav_video"
        android:title="@string/nav_video"
        android:icon="@drawable/ic_baseline_video_library" />

    <item android:id="@+id/nav_notification"
        android:title="@string/nav_notification"
        android:icon="@drawable/ic_baseline_notifications" />

    <item android:id="@+id/nav_group"
        android:title="@string/nav_group"
        android:icon="@drawable/ic_baseline_group" />

    <item android:id="@+id/nav_menu_account"
        android:title="@string/nav_menu"
        android:icon="@drawable/ic_baseline_menu" />

</menu>
