<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <ImageView
        android:id="@+id/image_view_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:src="@drawable/login"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/edit_phone_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_phone_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:layout_margin="@dimen/margin_login"
        android:autofillHints=""
        android:inputType="text" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/margin_login"
        app:layout_constraintEnd_toEndOf="@+id/edit_phone_email"
        app:layout_constraintStart_toStartOf="@+id/edit_phone_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone_email"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_login_btn"
        android:layout_marginTop="@dimen/margin_login"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlue"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/edit_phone_email"
        app:layout_constraintStart_toStartOf="@+id/edit_phone_email"
        app:layout_constraintTop_toBottomOf="@+id/edit_password" />

    <TextView
        android:id="@+id/button_forgot_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_forgot_btn"
        android:layout_marginTop="@dimen/margin_login"
        android:textStyle="bold"
        android:textColor="@color/colorBlue"
        android:textSize="16sp"
        android:clickable="true"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/edit_phone_email"
        app:layout_constraintStart_toStartOf="@+id/edit_phone_email"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        android:focusable="true" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="@+id/text_or"
        app:layout_constraintEnd_toEndOf="@+id/button_forgot_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/button_forgot_password"
        app:layout_constraintTop_toTopOf="@+id/text_or" />

    <TextView
        android:id="@+id/text_or"
        android:layout_width="@dimen/margin_login"
        android:layout_height="wrap_content"
        android:text="@string/login_or"
        android:background="@color/colorWhite"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/button_create_account"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_forgot_password" />

    <Button
        android:id="@+id/button_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_create_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_login"
        android:textStyle="bold"
        android:background="@color/colorJewel"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/button_forgot_password"
        app:layout_constraintStart_toStartOf="@+id/button_forgot_password" />


</androidx.constraintlayout.widget.ConstraintLayout>
